fixed the problem of not showing review, which was just created

--- a/src/pages/reviews/style.scss
+++ b/src/pages/reviews/style.scss
@@ -73,6 +73,7 @@
   border: 1px solid #E6E6E6;
   border-radius: 5px;
   max-width: 400px;
+  width: 100%;
 
   &__top {
     display: flex;
